# tighter_sparse_gp

./: README.md  pyproject.toml  requirements.txt
example/: run_snelson.py  snelson.csv
gpflow/: reg_example.py  tighter_models.py
tsvgp/gpflow/: sgpr.py  svgp.py
